--- a/src/app/display-stock/display-stock.component.html
+++ b/src/app/display-stock/display-stock.component.html
@@ -1,9 +1,9 @@
 <h1>Stock Details</h1>
 
-<div><span>Id</span> <span id="stockId"></span></div>
+<div><span>Id: </span> <span id="stockId">{{stockDetails['id']}}</span></div>
 
-<div><span>Name</span> <span id="stockName"></span></div>
+<div><span>Name:</span> <span id="stockName">{{stockDetails['stockName']}}</span></div>
 
-<div><span>Price</span> <span id="price"></span></div>
+<div><span>Price: </span> <span id="price">{{stockDetails['price']}}</span></div>
 
-<div><span>Quantity</span> <span id="quantity"></span></div>
+<div><span>Quantity: </span> <span id="quantity">{{stockDetails['quantity']}}</span></div>
